--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="image-box3"><a href=" "></a></div>
                 <div class="image-box4"><a href="  "></a></div>
                 <div class="image-box5"><p></p></div>
-                <div class="image-box6"><p>Bild 6</p></div>
+                <div class="image-box6"><p></p></div>
             </div>
             <div class="info-boxes">
                 <div class="info-card">
