--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Einfache Bilderseite</title>
+    <title>Meine Seite</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="layout">
-        <!-- Sidebar Navigation -->
         <aside class="sidebar">
             <h1>Navigation</h1>
             <nav>
@@ -16,31 +15,31 @@
                 <a href="https://www.bauaufmass.at/">Noah joel Maurer</a>
             </nav>
         </aside>
-        <!-- Hauptinhalt -->
         <main class="main-content">
-            <h2>Meine Seiten</h2>
+            <h2>Meine Seite</h2>
             <div class="welcome-box">
                 <h3>Servas!</h3>
                 <link href="">
             </div>
             <div class="image-container">
-                <a href="/Webseite/Bilder/HTL.jpg">
+                <div class="image-grid">
+                    <div class="image-box">
+                        <img src="Bilder/Ski.jpg" alt="Ski fahren" width="100%">
+                    </div>
+                    <div class="image-box2">
+                        <img src="Bilder/badminton.jpg" alt="Badminton" width=100%>
+                    </div>
+                    <div class="image-box3">
+                        <img src="Bilder/HTL.jpg" alt="HTL" width=100%>
+                    </div>
+                </div>
             </div>
-            <div class="image-grid">
-                <div class="image-box"><a href="/Webseite/Bilder/Ski.jpg"></div>
-                <div class="image-box2"><a href="/Webseite/Bilder/badminton.jpg"></div>
-                <div class="image-box3"><a href=" "></a></div>
-                <div class="image-box4"><a href="  "></a></div>
-                <div class="image-box5"><p></p></div>
-                <div class="image-box6"><p></p></div>
-            </div>
+
+
             <div class="info-boxes">
                 <div class="info-card">
                     <h3>Über mich</h3>
-                    <p>Mein Name ist Matteo. Ich mag Noah Maurer nicht. Denn er ist ein sehr sehr sehr schlauer und auch intelligenter und auch dummer Alien.</p>
-                </div>
-                <div class="info-card">
-                    <h3>Kontakt</h3>
+                    <p>Mein Name ist Matteo.</p>
                     <p>Email: matteo.sandholzer@gmail.com</p>
                 </div>
             </div>
@@ -48,3 +47,4 @@
     </div>
 </body>
 </html>
+
