Navigation links updated; image links made clickable; layout adjustments for better alignment.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <aside class="sidebar">
             <h1>Navigation</h1>
             <nav>
-                <a href="#" class="active">Home</a>
+                <a href="index.html" class="active">Home</a>
                 <a href="https://www.fis-ski.com/DB/general/athlete-biography.html?sectorcode=FS&competitorid=296670&type=statistics">Marius Simma FIS Profil</a>
-                <a href="https://www.bauaufmass.at/">Noah joel Maurer</a>
+                <a href="https://badminton-dornbirn.at/">Union Badminton Dornbirn</a>
             </nav>
         </aside>
         <main class="main-content">
@@ -24,24 +24,28 @@
             <div class="image-container">
                 <div class="image-grid">
                     <div class="image-box">
+                        <a href="Bilder/Ski.jpg" target="_blank">
                         <img src="Bilder/Ski.jpg" alt="Ski fahren" width="100%">
+                        </a>
                     </div>
                     <div class="image-box2">
+                        <a href="Bilder/badminton.jpg" target="_blank">
                         <img src="Bilder/badminton.jpg" alt="Badminton" width=100%>
+                        </a>
                     </div>
                     <div class="image-box3">
-                        <img src="Bilder/HTL.jpg" alt="HTL" width=100%>
+                        <a href="Bilder/HTL.jpg" target="_blank">
+                        <img src="Bilder/HTL.jpg" alt="HTL Dornbirn" width=100%>
+                        </a>
                     </div>
                 </div>
             </div>
 
 
-            <div class="info-boxes">
-                <div class="info-card">
-                    <h3>Über mich</h3>
-                    <p>Mein Name ist Matteo.</p>
-                    <p>Email: matteo.sandholzer@gmail.com</p>
-                </div>
+            <div class="info-box">
+                <h4>Über mich</h4>
+                <p>Mein Name ist Matteo.</p>
+                <p>Email: matteo.sandholzer@gmail.com</p>
             </div>
         </main>
     </div>
