Added text descriptions for skiing, badminton, and HTL Dornbirn; styled new text boxes for improved layout.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                         </a>
                     </div>
                 </div>
+                <div class="Text-grid">
+                    <div class="Text-box">Skifahren ist ein Wintersport, bei dem man mit zwei Skiern am Fuß einen verschneiten Hang hinuntergleitet.</div>
+                    <div class="Text-box2">Badminton ist ein schneller Rückschlagsport, der mit Schlägern und einem Federball über ein Netz gespielt wird und hohe Anforderungen an Kondition, Reaktion und Konzentration stellt.</div>
+                    <div class="Text-box3">Die HTL Dornbirn ist eine höhere technische Schule in Dornbirn mit Schwerpunkt auf technischen und wirtschaftlichen Ausbildungen, zum Beispiel in den Bereichen Textil, Chemie und Wirtschaftsingenieurwesen.</div>
+                </div>
             </div>
-
-
             <div class="info-box">
                 <h4>Über mich</h4>
                 <p>Mein Name ist Matteo.</p>
@@ -51,4 +54,3 @@
     </div>
 </body>
 </html>
-
