classes namen ändern

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta viewport="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Meine Seite</title>
     <link rel="stylesheet" href="style.css">
@@ -8,32 +9,31 @@
 <body>
     <div class="layout">
         <aside class="sidebar">
-            <h1>Navigation</h1>
             <nav>
                 <a href="index.html" class="active">Home</a>
                 <a href="https://www.fis-ski.com/DB/general/athlete-biography.html?sectorcode=FS&competitorid=296670&type=statistics">Marius Simma FIS Profil</a>
                 <a href="https://badminton-dornbirn.at/">Union Badminton Dornbirn</a>
             </nav>
         </aside>
-        <main class="main-content">
+        <main class="main">
             <h2>Meine Seite</h2>
-            <div class="welcome-box">
+            <div class="box">
                 <h3>Servas!</h3>
                 <link href="">
             </div>
-            <div class="image-container">
-                <div class="image-grid">
-                    <div class="image-box">
+            <div class="Bild-main">
+                <div class="Bild-grid">
+                    <div class="Bild-box">
                         <a href="Bilder/Ski.jpg" target="_blank">
                         <img src="Bilder/Ski.jpg" alt="Ski fahren" width="100%">
                         </a>
                     </div>
-                    <div class="image-box2">
+                    <div class="Bild-box2">
                         <a href="Bilder/badminton.jpg" target="_blank">
                         <img src="Bilder/badminton.jpg" alt="Badminton" width=100%>
                         </a>
                     </div>
-                    <div class="image-box3">
+                    <div class="Bild-box3">
                         <a href="Bilder/HTL.jpg" target="_blank">
                         <img src="Bilder/HTL.jpg" alt="HTL Dornbirn" width=100%>
                         </a>
