Refactor code structure for improved readability and maintainability Seite2 und 3

--- a/pdf/pdfbilder.html
+++ b/pdf/pdfbilder.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta viewport="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -8,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href=".../reset.css">
 </head>
+
 <body>
+    <!-- Seite 1 -->
     <div class="text-main">
         <h1>„…aus den Angeln“</h1>
         <p>Exponate der Ausstellung im Landhaus Bregenz</p>
@@ -21,8 +24,45 @@
         <p>„Ich möchte nie vollständig erwachsen werden"</p>
         <div class="Bild-grid">
             <img src="Bilder/image002.jpg" alt="Tuer Links">
-            <img src="Bilder/image003.jpg" alt="Tuer Rechts">   
+            <img src="Bilder/image003.jpg" alt="Tuer Rechts">
         </div>
     </div>
+    <!-- Seite 2 -->
+    <div class="text-secondary">
+        <h1>Ingrid Delacher</h1>
+        <hr width="1000px" align="left">
+        <p>„Gänseblümchen"</p>
+        <div class="Bild-grid">
+            <img src="Bilder/image007.jpg" alt="Tuer Beide">
+        </div>
+        <div class="text-2">
+            <p>Die beiden Türseiten sind als Holzschnitttafeln bearbeitet - die weisse und die braune </p>
+            <p>Seite als Ying und Yang-Symbol stehen für die Licht- und Schattenseiten des Lebens. Sie</p>
+            <p>können mit Reinheit, Unschuld, Neuanfängen und Liebe in Verbindung gebracht werden. </p>
+            <p>Kindheit, Bescheidenheit und Freude kann assoziiert werden</p>
+        </div>
+    </div>
+    <!--Seite 3-->
+    <div class="text-third">
+        <h1>Ruth Gschwendtner-Wölfle</h1>
+        <hr width="1000px" align="left">
+        <p>„2 Flügeltüren mit Startrampe"</p>
+        <div class="Bild-grid-3">
+            <img src="Bilder/image010.jpg" alt="Flügeltür Links" width="400px">
+            <img src="Bilder/image011.png" alt="Flügeltür Rechts" width="400px">
+        </div>
+        <div class="text-3">
+            <p>Die zwei Türflügel sind beidseitig bearbeitet: Blau-Weiss-Schattierungen verweisen auf </p>
+            <p>den Himmel, Raum, Offenheit. Oben die deutsche Übersetzung des umseitig geschriebenen </p>
+            <p>tibetischen Textes - Zitat des Buddha, der an 9 Beispielen die Vergänglichkeit beschreibt, </p>
+            <p>die, wie alle zusammengesetzten Phänomene, veränderlich sind, und zwar in jedem </p>
+            <p>Augenblick, er wird mit dem „64tel eines Fingerschnalzens“ definiert. Dieser alte Text </p>
+            <p>verbirgt sich jeweils auf der Rückseite unter einer transparenten Stoffbahn, die sich leicht </p>
+            <p>über den Türtext spannt und mit Wolken und schwach sichtbaren Bergen bedruckt ist. Der </p>
+            <p>tibetisch geschriebene Text ist nur vage zu erkennen. </p>
+        </div>
+    </div>
+
 </body>
+
 </html>
