--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta viewport="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Meine Seite</title>
+    <title>Mei Seiten</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             </nav>
         </aside>
         <main class="main">
-            <h2>Meine Seite</h2>
+            <h2>Mei Seiten</h2>
             <div class="box">
                 <h3>Servas!</h3>
                 <link href="">
