Seite 4/5 Formatierung, etc

--- a/pdf/pdfbilder.html
+++ b/pdf/pdfbilder.html
@@ -1,68 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta viewport="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta viewport="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href=".../reset.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href=".../reset.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Seite 1 -->
-    <div class="text-main">
+    <div class="Seite1">
+      <div class="text-main">
         <h1>„…aus den Angeln“</h1>
         <p>Exponate der Ausstellung im Landhaus Bregenz</p>
         <p>Zugunsten der Initiative SPIELLERNRAUM</p>
         <p>mit Versteigerung am 28. November 2025 um 18.00 Uhr</p>
-    </div>
-    <div class="Ueberschrift1">
+      </div>
+      <div class="Ueberschrift1">
         <h1>Roland Adlassnigg</h1>
-        <hr width="1000px" align="left">
+        <hr width="1000px" align="left" />
         <p>„Ich möchte nie vollständig erwachsen werden"</p>
         <div class="Bild-grid">
-            <img src="Bilder/image002.jpg" alt="Tuer Links">
-            <img src="Bilder/image003.jpg" alt="Tuer Rechts">
+          <img src="Bilder/image002.jpg" alt="Tuer Links" />
+          <img src="Bilder/image003.jpg" alt="Tuer Rechts" />
         </div>
-    </div>
-    <!-- Seite 2 -->
-    <div class="text-secondary">
+      </div>
+      <!-- Seite 2 -->
+      <div class="text-secondary">
         <h1>Ingrid Delacher</h1>
-        <hr width="1000px" align="left">
+        <hr width="1000px" align="left" />
         <p>„Gänseblümchen"</p>
         <div class="Bild-grid">
-            <img src="Bilder/image007.jpg" alt="Tuer Beide">
+          <img src="Bilder/image007.jpg" alt="Tuer Beide" />
         </div>
         <div class="text-2">
-            <p>Die beiden Türseiten sind als Holzschnitttafeln bearbeitet - die weisse und die braune </p>
-            <p>Seite als Ying und Yang-Symbol stehen für die Licht- und Schattenseiten des Lebens. Sie</p>
-            <p>können mit Reinheit, Unschuld, Neuanfängen und Liebe in Verbindung gebracht werden. </p>
-            <p>Kindheit, Bescheidenheit und Freude kann assoziiert werden</p>
+          <p>
+            Die beiden Türseiten sind als Holzschnitttafeln bearbeitet - die
+            weisse und die braune
+          </p>
+          <p>
+            Seite als Ying und Yang-Symbol stehen für die Licht- und
+            Schattenseiten des Lebens. Sie
+          </p>
+          <p>
+            können mit Reinheit, Unschuld, Neuanfängen und Liebe in Verbindung
+            gebracht werden.
+          </p>
+          <p>Kindheit, Bescheidenheit und Freude kann assoziiert werden</p>
         </div>
-    </div>
-    <!--Seite 3-->
-    <div class="text-third">
+      </div>
+      <!--Seite 3-->
+      <div class="text-third">
         <h1>Ruth Gschwendtner-Wölfle</h1>
-        <hr width="1000px" align="left">
+        <hr width="1000px" align="left" />
         <p>„2 Flügeltüren mit Startrampe"</p>
         <div class="Bild-grid-3">
-            <img src="Bilder/image010.jpg" alt="Flügeltür Links" width="400px">
-            <img src="Bilder/image011.png" alt="Flügeltür Rechts" width="400px">
+          <img src="Bilder/image010.jpg" alt="Flügeltür Links" width="400px" />
+          <img src="Bilder/image011.png" alt="Flügeltür Rechts" width="400px" />
         </div>
         <div class="text-3">
-            <p>Die zwei Türflügel sind beidseitig bearbeitet: Blau-Weiss-Schattierungen verweisen auf </p>
-            <p>den Himmel, Raum, Offenheit. Oben die deutsche Übersetzung des umseitig geschriebenen </p>
-            <p>tibetischen Textes - Zitat des Buddha, der an 9 Beispielen die Vergänglichkeit beschreibt, </p>
-            <p>die, wie alle zusammengesetzten Phänomene, veränderlich sind, und zwar in jedem </p>
-            <p>Augenblick, er wird mit dem „64tel eines Fingerschnalzens“ definiert. Dieser alte Text </p>
-            <p>verbirgt sich jeweils auf der Rückseite unter einer transparenten Stoffbahn, die sich leicht </p>
-            <p>über den Türtext spannt und mit Wolken und schwach sichtbaren Bergen bedruckt ist. Der </p>
-            <p>tibetisch geschriebene Text ist nur vage zu erkennen. </p>
+          <p>
+            Die zwei Türflügel sind beidseitig bearbeitet:
+            Blau-Weiss-Schattierungen verweisen auf
+          </p>
+          <p>
+            den Himmel, Raum, Offenheit. Oben die deutsche Übersetzung des
+            umseitig geschriebenen
+          </p>
+          <p>
+            tibetischen Textes - Zitat des Buddha, der an 9 Beispielen die
+            Vergänglichkeit beschreibt,
+          </p>
+          <p>
+            die, wie alle zusammengesetzten Phänomene, veränderlich sind, und
+            zwar in jedem
+          </p>
+          <p>
+            Augenblick, er wird mit dem „64tel eines Fingerschnalzens“
+            definiert. Dieser alte Text
+          </p>
+          <p>
+            verbirgt sich jeweils auf der Rückseite unter einer transparenten
+            Stoffbahn, die sich leicht
+          </p>
+          <p>
+            über den Türtext spannt und mit Wolken und schwach sichtbaren Bergen
+            bedruckt ist. Der
+          </p>
+          <p>tibetisch geschriebene Text ist nur vage zu erkennen.</p>
         </div>
+      </div>
     </div>
+    <!--Seite 4-->
+    <div class="text-fourth">
+      <h3>Ruth Gschwendtner-Wölfle</h3>
+      <div class="Bild-grid-4">
+        <img src="Bilder/image012.jpg" alt="Tür Links" width="400px" />
+        <img src="Bilder/image017.jpg" alt="Tür Rechts" width="400px" />
+      </div>
 
-</body>
+      <div class="unten">
+        <div class="unten-links">
+          <img src="Bilder/image015.jpg" alt="Tür-unten" />
+          <p class="text-unten">
+            Startlampe: legend – work in progress –<br />
+            erdverkumpfte Bergstiefel mit zarten<br />
+            goldenen Ballettschuhen
+          </p>
+        </div>
 
+        <div class="unten-rechts">
+          <p>
+            Der Zugang zur Weisheit liegt hinter Wolken und Bergen. Wer die<br />
+            blattvergoldete Klinke aktiv in die Hand nimmt, der öffnet sich
+            eine<br />
+            neue Welt. Der erste Schritt ist, den Wunsch zu entwickeln. Nur
+            wenn<br />
+            die Schuhe zu schwer sind, wird sich aus ihnen lösen wollen, die<br />
+            Starrempare betreten, und eine Wandlung wagen….
+          </p>
+          <p>
+            Therapie braucht diesen Wunsch, braucht Mut, Entschlossenheit und<br />
+            Zeit, Schweres, Leidvolles loszulassen und eine neue leichte
+            Dimension<br />
+            zu betreten. Möge die Übung gelingen!
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--Seite 4 Ende-->
+    <!--Seite 5-->
+    <div class="Seite5">
+      <div class="Ueberschrift5">
+        <h1>Peter Langebner</h1>
+        <hr width="1000px" align="left" />
+        <p>„Im Rahmen der Türe"</p>
+        <br />
+        <div class="tueren">
+          <div class="tuer">
+            <div class="tuer-links">Tür1</div>
+            <div class="tuer-rechts">
+              Die innere Tür*<br />
+              Innere Türen sind für die Äußeren zu öffnen
+            </div>
+          </div>
+
+          <div class="tuer">
+            <div class="tuer-links">Tür2</div>
+            <div class="tuer-rechts">
+              Die Tür zum Horizont*<br />
+              Der Blick zum Horizont ist die Fähigkeit, durch Türen hindurch zu
+              sehen;
+            </div>
+          </div>
+
+          <div class="tuer">
+            <div class="tuer-links">Tür3</div>
+            <div class="tuer-rechts">
+              Gender Tür*<br />
+              männliche und weibliche „TürklinkerInnen“ geben sich die Hände;
+            </div>
+          </div>
+        </div>
+        <div class="Bild-grid-5">
+          <img src="Bilder/image019.jpg" alt="Tuer-blau" />
+
+          <div class="text-rechts5">
+            <p><b>Arbeitstitel:</b></p>
+
+            <p>
+              Türen sind<br />
+              zum aufmachen<br />
+              oder<br />
+              zumachen<br />
+              oder<br />
+              zu lassen<br />
+              oder<br />
+              offen sein
+            </p>
+
+            <p>Türen entscheiden nicht</p>
+
+            <p>Technik: Lack gesprayt</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
