Rearragened the Repo

--- a/PDFBilder/pdf/pdfbilder.html
+++ b/PDFBilder/pdf/pdfbilder.html
@@ -188,5 +188,17 @@
         </div>
       </div>
     </div>
+    <!--Seite 6-->
+    <div class="Seite1">
+      <div class="text-sixth">
+        <h1>Georg Vith</h1>
+        <hr width="1000px" align="left" />
+        <p>„Camera Lucida"</p>
+      </div>
+      <div class="Bild-grid">
+        <img src="Bilder/image002.jpg" alt="Tuer Links" />
+      </div>
+    </div>
+    <!--Seite 6 Ende-->
   </body>
 </html>
