--- a/PDFBilder/pdf/pdfbilder.html
+++ b/PDFBilder/pdf/pdfbilder.html
@@ -189,16 +189,129 @@
       </div>
     </div>
     <!--Seite 6-->
-    <div class="Seite1">
+    <div class="Seite6">
       <div class="text-sixth">
         <h1>Georg Vith</h1>
         <hr width="1000px" align="left" />
         <p>„Camera Lucida"</p>
       </div>
-      <div class="Bild-grid">
-        <img src="Bilder/image002.jpg" alt="Tuer Links" />
+      <div class="Bild-grid-6">
+        <img src="Bilder/image022.jpg" alt="Tuer" />
+        <div class="text-rechts6">
+          <p>
+            „Die Entfernung des Ich zur Kindheit<br />
+            ist auch im Alter immer die gleiche.“<br />
+            (zit. Nach Helmut Lethen, Im<br />
+            Schatten des Fotografen, Rowohlt<br />
+            Berlin 2014) Die Tür wird zur Camera<br />
+            Lucida. Titel und Verwendung dieses<br />
+            Zeicheninstruments gehen zurück auf<br />
+            eine Patentanmeldung des britischen<br />
+            Physikers William Hyde Wollaston<br />
+            aus dem Jahre 1806. Sie wurde<br />
+            hauptsächlich zum Zeichnen von<br />
+            Landschaften und Portraits<br />
+            verwendet. Im Laufe des 19. und 20.<br />
+            Jahrhunderts entwickelte sich die<br />
+            Camera lucida zu einem wichtigen<br />
+            Hilfsmittel in der Entomologie zum<br />
+            genauen Zeichnen des Flügelgeäders<br />
+            von Insekten. In dem Buch „secret<br />
+            knowledge – rediscovering the lost<br />
+            techniques of the old masters” (2001)<br />
+            hat David Hockney diesem<br />
+            Instrument neues Leben eingehaucht.
+          </p>
+        </div>
+      </div>
+      <div class="text-unten6">
+        <p>
+          Bei der Camera lucida blickt man durch ein Guckloch direkt über die
+          Kante eines Prismas, <br />
+          das die Umrisse des Motivs auf das Zeichenpapier wirft. Der Benutzer
+          kann dadurch <br />
+          gleichzeitig die Umrisse des Motivs und das Papier sehen und kann das
+          Objekt dann<br />
+          einfach abzeichnen.
+        </p>
+      </div>
+      <div class="text-unten6-2">
+        <p>
+          „Der Blick durch das Guckloch (oben) ist quasi der Blick durch das
+          Schlüsselloch. Der <br />
+          veränderte Blick wird zu einem Schlüsselerlebnis, am Boden der Box
+          zeigt sich die <br />
+          Abbildung der Umgebung.“ (Georg Vith)
+        </p>
       </div>
     </div>
     <!--Seite 6 Ende-->
+    <!--Seite 7-->
+    <div class="text-seventh">
+      <h1>Klara Vith</h1>
+      <hr width="1000px" align="left" />
+      <p>„WC Tür“</p>
+      <div class="Bild-grid-7">
+        <img src="Bilder/image024.jpg" alt="tuer_Breit" />
+      </div>
+      <div class="text-7">
+        <p>
+          Die ehemalige WC-Tür wird zum Träger neuer Aluminiumschilder mit
+          Aufschriften wie <br />
+          ‚drücken‘, ‚klopfen‘, ‚eintreten‘ oder ‚aufbrechen‘. <br />
+          Die Tür wird so von einem funktionalen Objekt zu einer Metapher für
+          Schwellen, Gewalt <br />
+          und Möglichkeiten des Zugangs.
+        </p>
+      </div>
+    </div>
+    <!--Seite 7 Ende-->
+    <!--Seite 8-->
+    <div class="text-eight">
+      <h1>WolfGeorg</h1>
+      <hr width="1000px" align="left" />
+      <div class="tuer">
+        <div class="tuer-eins">
+          <p>Tür 1: „Den Mond anheulen oder nach den Sternen greifen“</p>
+          <p>Tür 2: „Alles ist möglich“</p>
+        </div>
+      </div>
+      <div class="Bild-grid-8">
+        <img src="Bilder/image026.jpg" alt="Tuer Links" />
+        <img src="Bilder/image029.jpg" alt="Tuer Rechts"
+      </div>
+    </div>
+    <div class="text-unten-8">
+      <p>
+        <strong>Tür 1 </strong><br />
+        Auf der Vorderseite der Gartentür sitzt ein Wolf und heult den Mond an.
+        <br />
+        Auf der Rückseite sind viele vergoldete Sterne zu sehen, die um die
+        Wette funkeln.<br />
+        Es soll ausdrücken, dass man sehr unterschiedlich mit einer Situation
+        umgehen kann.
+      </p>
+    </div>
+    <!--Seite 8 Ende-->
+    <!--Seite 9-->
+    <div class="text-ninth">
+      <h1>WolfGeorg</h1>
+      <div class="Bild-grid-9">
+        <img src="Bilder/image031.jpg" alt="Tuer Beide" />
+      </div>
+      <div class="text-9">
+        <p>
+          <strong>Tür 2</strong> Auf der Vorderseite ist der untere Teil der
+          Türe durchbrochen und es kommt ein Wolf<br />
+          heraus ( im Winkel von 80Grad). Oben durchbohren 2 Vögel die Tür. Von
+          einem sieht man<br />
+          nur das Vorderteil, vom anderen das Hinterteil. Auf der Rückseite
+          umgekehrt. <br />
+          Es soll ausdrücken, dass nichts so ist wie es scheint, dass viel mehr
+          möglich ist, als man <br />
+          denkt
+        </p>
+      </div>
+    </div>
   </body>
 </html>
